Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

13 September 2004 Sylvain Pion
- Regular traits cleanups.
- Added Regular_triangulation_filtered_traits_2.

7 September 2004 Menelaos Karavelas
- re-added commented code in join_vertices that was referring to degree
  2 vertices

6 September 2004 Menelaos Karavelas
- Documentation: moved join and split methods from the concept TDS_2 to the
  model of T_d_s_2
- Documentation: the methods insert_degree_2 and remove_degree_2 (from
  the Apollonius_graph_2 package) were added in T_d_s_2.
- Code: the methods insert_degree_2 and remove_degree_2 where moved from
  Apollonius_graph_data_structure_2 (obsolete) to
  Triangulation_data_structure_2.

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters

1 september 2004 Mariette
- fixed typo in doc : ref page of Triangulation_2

28 August 2004 Menelaos Karavelas
- added code for join_vertices and split_vertex methods
- added versions of join_vertices that take an Edge, an Edge_iterator and
  an Edge_circulator
- modified the TDS_2 user and ref manual in order to reflect the addition of
  the join and split operations (added corresponding figures and
  xfig source also)

25 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

24 August 2004 Mariette
- make tag dependant function in Triangulation_hierarchy_2
  a template  to reallow  explicit  instantiation in testsuite 

24 August 2004 Mariette
 - added a Weighted_tag in Triangulation_2 and Regular_triangulation_2
 - fixed the pb of copy_triangulation for hierarchies of regular triangulation

13 August 2004 Sylvain Pion
- T_hierarchy_vertex_base : remove useless and dubious "if (this)".

12 August 2004 Andreas Fabri
- Added #ifndef CGAL_CFG_USING_BASE_MEMBER_BUG_2 in several header files

02 August 2004 Mariette Yvinec
- fixed clean of demo/Triangulation_2/makefile
