@@ -21,8 +21,6 @@
 // coordinator   : INRIA Sophia-Antipolis
 // ============================================================================
 
-
-
 #include <CGAL/_test_types.h>
 #include <CGAL/Weighted_point.h>
 
@@ -30,14 +28,12 @@
 #include <CGAL/Regular_triangulation_2.h>
 #include <CGAL/_test_cls_regular_triangulation_2.C>
 
-#include <CGAL/Filtered_kernel.h>
-#include <CGAL/Regular_triangulation_filtered_traits_2.h>
+#include <CGAL/Exact_predicates_inexact_constructions_kernel.h>
+
+typedef CGAL::Regular_triangulation_euclidean_traits_2
+              <CGAL::Exact_predicates_inexact_constructions_kernel>  RGt;
 
 // Explicit instantiation of the whole class :
-//typedef CGAL::Regular_triangulation_euclidean_traits_2
-//                              <Test_rep_cartesian, Ftype>      RGt;
-typedef CGAL::Filtered_kernel<CGAL::Simple_cartesian<double> >  FK;
-typedef CGAL::Regular_triangulation_filtered_traits_2<FK>       RGt;
 template class CGAL::Regular_triangulation_2<RGt>;
 
 int main()
@@ -60,4 +56,3 @@ int main()
 
   return 0;
 }
-
