@@ -1,6 +1,11 @@
 Package triangulation: provides triangulations Delaunay triangulations, 
 constrained and regular triangulations with  tests and examples.
 
+14 September 2004 Sylvain Pion
+- Specialize Regular_traits_2<> for Exact_pred_inexact_const_kernel, so that
+  it becomes automatically the filtered traits (and thus gets better backward
+  compat).
+
 13 September 2004 Sylvain Pion
 - Regular traits cleanups.
 - Added Regular_triangulation_filtered_traits_2.
